[package]
name = "git-rewrite"
version = "1.0.0"
edition = "2024"

[dependencies]
git2 = "0.20.2"
walkdir = "2.5.0"
anyhow = "1.0.100"
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }

[[bin]]
name = "unpack"
path = "src/unpack.rs"

[[bin]]
name = "rebuild"
path = "src/rebuild.rs"
